--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome to Weblytic</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <h1>Weblytic</h1>
         <ul class="nav">
             <li><a href="#">Home</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">Portfolio</a></li>
         </ul>
     </div>
