fixed image path

--- a/about.html
+++ b/about.html
@@ -37,15 +37,15 @@
         <div class="images">
             <div class="features-item">
                 <h3>Weblytic works</h3>
-                <img src="/images/works.jpg" alt="Weblytic works">
+                <img src="images/works.jpg" alt="Weblytic works">
             </div>
             <div class="features-item">
                 <h3>Weblytic products</h3>
-                <img src="/images/products.jpg" alt="Weblytic products">
+                <img src="images/products.jpg" alt="Weblytic products">
             </div>
             <div class="features-item">
                 <h3>Weblytic events</h3>
-                <img src="/images/events.jpg" alt="Weblytic events">
+                <img src="images/events.jpg" alt="Weblytic events">
             </div>
         </div>
     </div>
