--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="images">
             <div class="features-item">
                 <h3>Weblytic works</h3>
-                <img src="images/works.jpg" alt="Weblytic works">
+                <img src="../weblytic-sample-site/images/works.jpg" alt="Weblytic works">
             </div>
             <div class="features-item">
                 <h3>Weblytic products</h3>
