portfolio page is added

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -15,45 +15,22 @@
         <h1>Weblytic</h1>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#">Portfolio</a></li>
         </ul>
     </div>
-
     <div class="container">
         <div class="container-inner">
-            <h1>About us</h1>
+            <h1>Who we are!</h1>
             <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ligula magna, rutrum et congue eu, porta at
                 justo. Quisque venenatis mi ut lectus bibendum, vel scelerisque risus varius. Curabitur sit amet ipsum
                 ex.
                 Nullam sollicitudin turpis eu odio laoreet consectetur. Pellentesque habitant morbi tristique senectus
                 et
                 netus et malesuada fames ac turpis egestas. </p>
-            <a href="#" class="button">Read More</a>
+            <a href="#" class="button">Learn More</a>
         </div>
     </div>
-
-    <div class="features">
-        <div class="images">
-            <div class="features-item">
-                <h3>Weblytic works</h3>
-                <img src="../weblytic-sample-site/images/works.jpg" alt="Weblytic works">
-            </div>
-            <div class="features-item">
-                <h3>Weblytic products</h3>
-                <img src="images/products.jpg" alt="Weblytic products">
-            </div>
-            <div class="features-item">
-                <h3>Weblytic events</h3>
-                <img src="images/events.jpg" alt="Weblytic events">
-            </div>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p>&copy; 2020 Weblytic Inc.</p>
-    </div>
-
 </body>
 
 </html>
