--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="nav">
             <li><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
     <div class="container">
